--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       - "7000:8080"
     volumes:
       - ~/docker-data:/usr/src/app/db
+      - ./config.toml:/usr/src/app/config.toml
     environment:
       - TZ=Etc/UTC
       - RUST_LOG=info,nostr_rs_relay=info
-    command: ./nostr-rs-relay --db /usr/src/app/db --host 0.0.0.0
+    command: ./nostr-rs-relay --db /usr/src/app/db --host 0.0.0.0 --config /usr/src/app/config.toml
