--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "7000:8080"
     volumes:
-      - ~/docker-data:/usr/src/app/db
+      - ./db:/usr/src/app/db
       - ./config.toml:/usr/src/app/config.toml
     environment:
       - TZ=Etc/UTC
